--- a/grand.html
+++ b/grand.html
@@ -51,7 +51,7 @@
 
 <p>Jamaucsi elmondása szerint az első két játék gépjármű-modelljei 300 poligonból, a Gran Turismo 3: A-Specben és a Gran Turismo 4-ben 4000 poligonból, míg a Gran Turismo 5-ben a „prémiumautók” akár 500 000 poligonból épültek fel.</p>
     
-<!--Hali, annyi hozzáfűzni valóm lenne a dolgodhoz, hogy próbáld meg a táblázataidat a szöveged szélességére editelni, mint az autósképeset. Ha nem megy mert köcsög a table és nem lehet normálisan konfigurálni, akkor szerintem fotózd ki a táblázatot és illeszd be imageként. Még sorokat is spórolnál vele. -->
+<div style="overflow-x: auto;"><!--Hali, annyi hozzáfűzni valóm lenne a dolgodhoz, hogy próbáld meg a táblázataidat a szöveged szélességére editelni, mint az autósképeset. Ha nem megy mert köcsög a table és nem lehet normálisan konfigurálni, akkor szerintem fotózd ki a táblázatot és illeszd be imageként. Még sorokat is spórolnál vele. -->
 <table class="Típusok col-lg-12">
     <thead>
         <th>Cím</th>
@@ -126,9 +126,11 @@
         <td>-</td>
     </tr>
 </table>
+</div>
 <!--ha tuds keress ennek a táblázatnak egy magasabb minőségű képet, vagy ha mindent a nyavajás opacity bánt akkor add meg opacity helyett background-color: 0,0,0,0.5-ben vagy valahogy így. Az remélhetőleg megoldja a bajokat.-->
 <h2>Másodlagos megjelenések</h2>
 
+<div style="overflow-x: auto;">
 <table class="Megjelenések col-lg-12">
     <thead>
         <th>Cím</th>
@@ -149,7 +151,6 @@
     <tr>
         <td>Gran Turismo Concept: 2002 Tokyo-Seoul</td>
         <td>2002</td>
-        <td></td>
         <td>-</td>
         <td>-</td>
         <td>90 000</td>
@@ -157,7 +158,6 @@
     <tr>
         <td>Gran Turismo Concept: 2002 Tokyo-Geneva</td>
         <td>2002</td>
-        <td></td>
         <td>100</td>
         <td>5</td>
         <td>1 030 000</td>
@@ -165,7 +165,6 @@
     <tr>
         <td>Gran Turismo 4 Prologue</td>
         <td>2003/2004</td>
-        <td></td>
         <td>50</td>
         <td>5</td>
         <td>1 400 000</td>
@@ -173,7 +172,6 @@
     <tr>
         <td>Gran Turismo 4 Online (tesztverzió)</td>
         <td>2006</td>
-        <td></td>
         <td>-</td>
         <td>-</td>
         <td>-</td>
@@ -189,7 +187,6 @@
     <tr>
         <td>Gran Turismo 5 Prologue</td>
         <td>2007/2008</td>
-        <td></td>
         <td>70</td>
         <td>6</td>
         <td>5 350 000</td>
@@ -203,7 +200,13 @@
         <td>4 670 000</td>
     </tr>
 </table>
+</div>
+
 <br>
+
+<h2>Egyéb megjelenések</h2>
+
+<div style="overflow-x: auto;">
 <table class="Verziók">
     <thead>
         <th>Cím</th>
@@ -246,11 +249,13 @@
         <td>2004 novemberében bejelentettek egy fiatalabb korosztályt megcélzó Gran Turismo játékot, melynek eredetileg 2005-ben kellett volna megjelennie. 2006 szeptemberében Jamaucsi Kazunori bejelentette, hogy a játék még mindig fejlesztés alatt áll. 2008 áprilisában egy a Gran Turismo 5 körül forgó interjúban Jamaucsi bejelentette, hogy „reményeink szerint a Gran Turismo for Boys a GT5 egyik funkciója lesz”." 2013-ban Jamaucsi egy a GTPlanetnek adott interjújában elmondta, hogy a PlayStation Portable kézikonzolra megjelent Gran Turismo volt a Gran Turismo for Boys ötlet megvalósítása, így nincs szükség egy különálló játék elkészítésére.</td>
     </tr>
 </table>
+</div>
 
 <h2>Fogadtatás</h2>
 <p>A Gran Turismo sorozat részei a következő megjelenéséig igen kedveltek a hétköznapi játékosoktól kezdve a profi szimulátor rajongókig. A sikerességének köszönhetően, a sorozat 7 esetben került be a Guinnes Rekordok Könyvének 2008-as, Játékos kiadásába. Ezek között szerepelnek a „Legtöbb jármű egy versenyjátékban”, „Legjobb eladásokkal rendelkező PlayStation-játék”, „Versenyjátékban szereplő legöregebb autó” és a „Versenyjátékhoz járó leghosszabb használati útmutató”.</p>
 
 <h2>Átlagpontszámok</h2>
+<div style="overflow-x: auto;">
 <table class="Rating col-lg-12">
     <thead>
         <th>Játék</th>
@@ -323,15 +328,19 @@
         <td>75</td>
     </tr>
 </table>
+</div>
+
 <h2>Gran Turismoval kapcsolatos termékek</h2>
 
 <h3>Hivatalos szimulátor csomagok</h3>
 <p>A Polyphony Digital együttműködött a perifériákat gyártó Logitech-el és az autóalkatrészeket gyártó Sparco-val, hogy hivatalos vezetési szimulátorkészleteket tervezzenek a Gran Turismo franchise számára. A legújabb termékmegnevezés a Driving Force GT. Két másik versenykormány kompatibilis a Gran Turismo-val.</p>
-<br>
+<img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Versenyszett.jpg" class="SZÉK">
+<br><br>
 
 <h3>Hivatalos modellautó készletek</h3>
 <p>2009-ben a HPI Racing rádióvezérlésű modellautógyár hivatalos RC-autó-összeköttetést adott ki: a Gran Turismo által tervezett HPI E10 RTR Ford GT LM Race Car Spec II-t (200mm), egy előre beépített, hivatalosan engedélyezett rádióvezérlésű autóskészletet. úgy készült, hogy pontosan úgy nézzen ki, mint a Gran Turismo 4 borítóautója. A jövőbeni kiadások tervei között szerepel további készletek kiadása más Gran Turismo borítóautók lemásolására.</p>
-<br>
+<img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/TávAutó.jpg" class="TávAutó">
+<br><br>
 
 <h3>Gran Turismo kávézó</h3>
 <p>2009-ben megnyílt egy kávézó A Twin Ring Motegi nevű versenypályán.</p>
