--- a/mine.html
+++ b/mine.html
@@ -46,21 +46,23 @@
     Ennyi lettem volna, csütörtökön tali!
 
       -->
-        <h1>Kezdetek</h1>
+        <h1>Történet</h1>
 
         <p>
             A Minecraft nevű játékot Markus Persson indította útjára 2009-ben így már 14 éve és a Mojang adta ki 2011-ben
-            vagyis 12 éve.
+            vagyis 12 éve. 2014-ben a Microsoft felvásárolta a játék fejlesztésével és kiadásával foglalkozó céget, ezzel együtt birtokukba került a Minecraft tulajdonjoga is.
+        </p>
+        <p>
+            A Minecraft nagy népszerűségnek örvend, számos díjat nyert el és minden idők egyik legbefolyásosabb játéka lett. A játék népszerűsítésében nagy szerepet játszott a közösségi média, paródiák, különböző adaptációk, ajándéktárgyak, illetve az évente megrendezésre kerülő MineCon. A játékot az oktatásban is felhasználták első sorban számítástechnikai rendszerek, virtuális számítógépek és hardverek terén. Számos spin-off is készült, ilyenek a 2015-ös Minecraft: Story Mode, a 2019-es Minecraft Earth és a 2020-as Minecraft Dungeons és a 2023-ra várható Minecraft Legends.
         </p>
 
         <h1>Játékmenet</h1>
 
         <p>
-            Egy Véletleszerűe generált világba kerülünk és a célunk az Ender Dragon megtalálása és legyőzese. Nem kell
-            szigorúan követni ezt a célt mivel azt csinálunk ebben a világban amit szeretnénk és a legyőzése után sem lesz
+            Egy Véletleszerűen generált lényegében végtelen világba kerülünk és a célunk az Ender Dragon megtalálása és legyőzese. Nem kell szigorúan követni ezt a célt mivel azt csinálunk ebben a világban amit szeretnénk. A legyőzése után sem lesz
             vége a játéknak, de ezt szokták a játék végének nevezni és a <a href="https://www.speedrun.com/mc?h=Any_Glitchless-Random_Seed-1.16&x=mkeyl926-r8rg67rn.21d4zvp1-wl33kewl.4qye4731" target="_blank">Speedrun</a>-ok vége is ekkor van.
         </p>
-
+        <div class="container"><img src="minenhandwerkképek/The end.png" alt="end" title="The End" class="img4"></div>
         <h1>Játékmódok</h1>
 
         <h2>Túlélő</h2>
@@ -1048,8 +1050,20 @@
         </div>
         <p>Részletesebb leírást és a Snapshot kipróbálását <a
                 href="https://www.minecraft.net/en-us/article/minecraft-snapshot-23w07a" target="_blank">itt</a> teheted
-            meg.</p>
+            meg.
+        </p>
+    
+    <h1>Technoblade</h1>
+    <div class="container">
+        <figure>
+            <img src="minenhandwerkképek/techno.jpg" class="img5">
+            <figcaption>Technoblade</figcaption>
+        </figure>
     </div>
+    <p>Techno egy nagyon befolyásos Minecraft Youtuber és streamer volt.Kitűnően PvP-zett és rendszeresen nyert versenyeket.Lényegében mindenki rettegett tőle ha vele került szembe. <a href="https://minecraft-monday.fandom.com/wiki/Minecraft_Monday" target="_blank">Minecraft Monday</a>-t is nyert. Sötét humora és kreatív körbeírásai melyekkel a Twitch guidline-jait megkerülte és ezzel még viccesebbé tette vidóit és streamjeit.</p>
+    <p>Személyesen nagyon kedveltem és sok clip-et néztem róla és vicceiról. Sajnos 2022 nyarán meghalt 4. stádiumú rákban 23 évesen.</p>
+    <p>Apukájával küldött nézőinek egy búcsúlevelet "<a href="https://www.youtube.com/watch?v=DPMluEVUqS0" target="_blank">So long nerds</a>" néven.</p>
+</div>
     <footer>
         <div class="row footer">
             <div class="col-lg-5 col-md-6 col-sm-12">
