--- a/grand.html
+++ b/grand.html
@@ -344,11 +344,39 @@
 
 <h3>Gran Turismo kávézó</h3>
 <p>2009-ben megnyílt egy kávézó A Twin Ring Motegi nevű versenypályán.</p>
-<br>
+<img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Kávézó.jpg" class="Kávézó">
+<br><br>
 
 <h3>Utcanevek</h3>
 <p>A Mount Panorama Circuit Gran Turismo 6-ba való beépítésének elismeréseként az ausztráliai Bathurst városa bemutatta a Gran Turismo Drive nevű új utcát 2013 decemberében. Bathurst polgármestere, Gary Rush azt mondta: „Világhírű autóversenypályánkon egy kört vezetni életet megváltoztató élmény azok számára, akiknek lehetőségük van rá, és a Bathurst Regionális Tanács nagyon izgatottan várja, hogy a Gran Turismo 6 elindítása révén megnyíljon a Mount Panorama élmény."</p><br>
 <p>Ugyancsak 2013-ban a sorozat készítője, Kazunori Yamauchi utcát neveztek el a tiszteletére a spanyolországi Ronda városában. A Paseo de Kazunori Yamauchi névre keresztelt utca kígyózik a Parador de Ronda körül. Ronda város polgármestere, Maria de la Paz Fernandez Lobato szerint: "Kétségtelen, hogy munkái hatalmas kulturális visszhangot váltanak ki a mai emberek körében. A versenyjátékok műfaját a realizmus új szintjeire terelte, és alkotásai éppolyan művészet, mint technológia Ronda és a Gran Turismo kapcsolata azt is tükrözi, hogy ősi városunk modern, nyüzsgő lakóhely, és nagyon is a 21. század része.”</p>
+
+<div style="overflow-x: auto;">
+<table class="Képek">
+    <tr>
+        <td><img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Galéria1.jpg" class="Galéria"></td>
+        <td><img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Galéria2.jpg" class="Galéria"></td>
+        <td><img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Galéria3.jpg" class="Galéria2"></td>
+    </tr>
+    <tr>
+        <td><img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Galéria4.jpg" class="Galéria"></td>
+        <td><img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Galéria5.jpg" class="Galéria"></td>
+        <td><img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Galéria6.png" class="Galéria3"></td>
+    </tr>
+</table>
+</div>
+<br><br>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/42qLKpcUxyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="margin-left: 500px;"></iframe>
+
+<br><br>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ULfjoCqEo6I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="margin-left: 500px;"></iframe>
+
+<br><br>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1tBUsXIkG1A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="margin-left: 500px;"></iframe>
+
 <footer>
     <div class="row footer">
         <div class="col-lg-5 col-md-6 col-sm-12">
