--- a/mine.html
+++ b/mine.html
@@ -46,7 +46,7 @@
     Ennyi lettem volna, csütörtökön tali!
 
       -->
-        <h1>Történet</h1>
+        <h1 style="margin-top: 2.5%;">Történet</h1>
 
         <p>
             A Minecraft nevű játékot Markus Persson indította útjára 2009-ben így már 14 éve és a Mojang adta ki 2011-ben
@@ -60,7 +60,7 @@
 
         <p>
             Egy Véletleszerűen generált lényegében végtelen világba kerülünk és a célunk az Ender Dragon megtalálása és legyőzese. Nem kell szigorúan követni ezt a célt mivel azt csinálunk ebben a világban amit szeretnénk. A legyőzése után sem lesz
-            vége a játéknak, de ezt szokták a játék végének nevezni és a <a href="https://www.speedrun.com/mc?h=Any_Glitchless-Random_Seed-1.16&x=mkeyl926-r8rg67rn.21d4zvp1-wl33kewl.4qye4731" target="_blank">Speedrun</a>-ok vége is ekkor van.
+            vége a játéknak, de ezt szokták a játék végének nevezni és a <a href="https://www.speedrun.com/mc?h=Any_Glitchless-Random_Seed-1.16&x=mkeyl926-r8rg67rn.21d4zvp1-wl33kewl.4qye4731" target="_blank" class="a1">Speedrun</a>-ok vége is ekkor van.
         </p>
         <div class="container"><img src="minenhandwerkképek/The end.png" alt="end" title="The End" class="img4"></div>
         <h1>Játékmódok</h1>
@@ -1049,7 +1049,7 @@
             </div>
         </div>
         <p>Részletesebb leírást és a Snapshot kipróbálását <a
-                href="https://www.minecraft.net/en-us/article/minecraft-snapshot-23w07a" target="_blank">itt</a> teheted
+                href="https://www.minecraft.net/en-us/article/minecraft-snapshot-23w07a" target="_blank" class="a1">itt</a> teheted
             meg.
         </p>
     
@@ -1060,9 +1060,9 @@
             <figcaption>Technoblade</figcaption>
         </figure>
     </div>
-    <p>Techno egy nagyon befolyásos Minecraft Youtuber és streamer volt.Kitűnően PvP-zett és rendszeresen nyert versenyeket.Lényegében mindenki rettegett tőle ha vele került szembe. <a href="https://minecraft-monday.fandom.com/wiki/Minecraft_Monday" target="_blank">Minecraft Monday</a>-t is nyert. Sötét humora és kreatív körbeírásai melyekkel a Twitch guidline-jait megkerülte és ezzel még viccesebbé tette vidóit és streamjeit.</p>
+    <p>Techno egy nagyon befolyásos Minecraft Youtuber és streamer volt.Kitűnően PvP-zett és rendszeresen nyert versenyeket.Lényegében mindenki rettegett tőle ha vele került szembe. <a href="https://minecraft-monday.fandom.com/wiki/Minecraft_Monday" target="_blank" class="a1">Minecraft Monday</a>-t is nyert. Sötét humora és kreatív körbeírásai melyekkel a Twitch guidline-jait megkerülte és ezzel még viccesebbé tette vidóit és streamjeit.</p>
     <p>Személyesen nagyon kedveltem és sok clip-et néztem róla és vicceiról. Sajnos 2022 nyarán meghalt 4. stádiumú rákban 23 évesen.</p>
-    <p>Apukájával küldött nézőinek egy búcsúlevelet "<a href="https://www.youtube.com/watch?v=DPMluEVUqS0" target="_blank">So long nerds</a>" néven.</p>
+    <p>Apukájával küldött nézőinek egy búcsúlevelet "<a href="https://www.youtube.com/watch?v=DPMluEVUqS0" target="_blank" class="a1">So long nerds</a>" néven.</p>
 </div>
     <footer>
         <div class="row footer">
