--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
             <p class="t2">Alapítóink, a belső négyes a csapatunkat életbentartó szív. Bár mindannyian játékosokként
                 kezdték,
                 mára már szervezőkké és stratégákká váltak, akik felelős döntéseket hozva vezetik szervezetünket.
-                Ennek ellenére ők sem vonultak vissza teljesen a frontvonalról és a csapat cipelésének terhe mit sem csorbított humorérzékükön.</p>
+                Ennek ellenére ők sem vonultak vissza teljesen a frontvonalról és a csapat cipelésének terhe mit sem csorbított <a href="/Rolunk_kepek/egg1.png" class="dis-a" target="_blank">humorérzékükön</a>.</p>
         </div>
     </div>
     <div class=" d1">
@@ -93,7 +93,7 @@
                             <p>A dzsungelbéli asszasszinátor</p>
                         </div>
                         <div class="fc-back">
-                            <img src="Rolunk_kepek/alapito 2.jpg" alt="Alapító3" class="fc-img">
+                            <img src="Rolunk_kepek/alapito4.jpg" alt="Alapító3" class="fc-img">
                         </div>
                     </div>
                 </div>
