--- a/mine.html
+++ b/mine.html
@@ -331,7 +331,7 @@
 
 
         
-
+        <h1>Frissítési jegyzet</h1>
 
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12">
