--- a/grand.html
+++ b/grand.html
@@ -334,37 +334,37 @@
 
 <h3>Hivatalos szimulátor csomagok</h3>
 <p>A Polyphony Digital együttműködött a perifériákat gyártó Logitech-el és az autóalkatrészeket gyártó Sparco-val, hogy hivatalos vezetési szimulátorkészleteket tervezzenek a Gran Turismo franchise számára. A legújabb termékmegnevezés a Driving Force GT. Két másik versenykormány kompatibilis a Gran Turismo-val.</p>
-<img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Versenyszett.jpg" class="SZÉK">
+<img src="../Projekt_Sybilla/GTKépek/Versenyszett.jpg" class="SZÉK">
 <br><br>
 
 <h3>Hivatalos modellautó készletek</h3>
 <p>2009-ben a HPI Racing rádióvezérlésű modellautógyár hivatalos RC-autó-összeköttetést adott ki: a Gran Turismo által tervezett HPI E10 RTR Ford GT LM Race Car Spec II-t (200mm), egy előre beépített, hivatalosan engedélyezett rádióvezérlésű autóskészletet. úgy készült, hogy pontosan úgy nézzen ki, mint a Gran Turismo 4 borítóautója. A jövőbeni kiadások tervei között szerepel további készletek kiadása más Gran Turismo borítóautók lemásolására.</p>
-<img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/TávAutó.jpg" class="TávAutó">
+<img src="../Projekt_Sybilla/GTKépek/TávAutó.jpg" class="TávAutó">
 <br><br>
 
 <h3>Gran Turismo kávézó</h3>
 <p>2009-ben megnyílt egy kávézó A Twin Ring Motegi nevű versenypályán.</p>
-<img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Kávézó.jpg" class="Kávézó">
+<img src="../Projekt_Sybilla/GTKépek/Kávézó.jpg" class="Kávézó">
 <br><br>
 
 <h3>Utcanevek</h3>
 <p>A Mount Panorama Circuit Gran Turismo 6-ba való beépítésének elismeréseként az ausztráliai Bathurst városa bemutatta a Gran Turismo Drive nevű új utcát 2013 decemberében. Bathurst polgármestere, Gary Rush azt mondta: „Világhírű autóversenypályánkon egy kört vezetni életet megváltoztató élmény azok számára, akiknek lehetőségük van rá, és a Bathurst Regionális Tanács nagyon izgatottan várja, hogy a Gran Turismo 6 elindítása révén megnyíljon a Mount Panorama élmény."</p><br>
 <p>Ugyancsak 2013-ban a sorozat készítője, Kazunori Yamauchi utcát neveztek el a tiszteletére a spanyolországi Ronda városában. A Paseo de Kazunori Yamauchi névre keresztelt utca kígyózik a Parador de Ronda körül. Ronda város polgármestere, Maria de la Paz Fernandez Lobato szerint: "Kétségtelen, hogy munkái hatalmas kulturális visszhangot váltanak ki a mai emberek körében. A versenyjátékok műfaját a realizmus új szintjeire terelte, és alkotásai éppolyan művészet, mint technológia Ronda és a Gran Turismo kapcsolata azt is tükrözi, hogy ősi városunk modern, nyüzsgő lakóhely, és nagyon is a 21. század része.”</p>
-
+<div class="container"><div class="row"><div class="col-lg-12 közép">
 <div style="overflow-x: auto;">
 <table class="Képek">
     <tr>
-        <td><img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Galéria1.jpg" class="Galéria"></td>
-        <td><img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Galéria2.jpg" class="Galéria"></td>
-        <td><img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Galéria3.jpg" class="Galéria2"></td>
-    </tr>
+        <td><img src="../Projekt_Sybilla/GTKépek/Galéria1.jpg" class="Galéria"></td>
+        <td><img src="../Projekt_Sybilla/GTKépek/Galéria2.jpg" class="Galéria"></td></tr>
+    <tr>   
+        <td><img src="../Projekt_Sybilla/GTKépek/Galéria3.jpg" class="Galéria"></td>
+        <td><img src="../Projekt_Sybilla/GTKépek/Galéria4.jpg" class="Galéria"></td></tr>
     <tr>
-        <td><img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Galéria4.jpg" class="Galéria"></td>
-        <td><img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Galéria5.jpg" class="Galéria"></td>
-        <td><img src="../Projekt_Sybilla/ChickenStripsAAAAAAAAAAAA/Galéria6.png" class="Galéria3"></td>
+        <td><img src="../Projekt_Sybilla/GTKépek/Galéria5.jpg" class="Galéria"></td>
+        <td><img src="../Projekt_Sybilla/GTKépek/Galéria6.png" class="Galéria"></td>
     </tr>
 </table>
-</div>
+</div></div></div></div>
 <br><br>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/42qLKpcUxyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="margin-left: 500px;"></iframe>
