--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
             <p class="t2">Alapítóink, a belső négyes a csapatunkat életbentartó szív. Bár mindannyian játékosokként
                 kezdték,
                 mára már szervezőkké és stratégákká váltak, akik felelős döntéseket hozva vezetik szervezetünket.
-                Ennek ellenére ők sem vonultak vissza teljesen a frontvonalról és a csapat cipelésének terhe mit sem csorbított <a href="./Rolunk_kepek/egg.jpg" class="dis-a" target="_blank">humorérzékükön</a>.</p>
+                Ennek ellenére ők sem vonultak vissza teljesen a frontvonalról és a csapat cipelésének terhe mit sem csorbított humorérzékükön. Annyira nem, hogy néhányan még <a href="./Rolunk_kepek/egg.jpg" class="dis-a" target="_blank">cosplayezésre</a> is vetemednek.</p>
         </div>
     </div>
     <div class=" d1">
